sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departSpeed' in definition of vehicle '0' is empty.
Error: Invalid departSpeed definition for vehicle '0';
 must be one of ("random", "max", or a float>=0)
Quitting (on error).
